cmake_minimum_required(VERSION 3.17)
project(C++_Primer_Plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___Primer_Plus
              #  4-1_arrayone.cpp
        #        homework.cpp
               4-2_string.cpp
        #        4-3_instr1.cpp
        #        4-4_instr2.cpp
        #        4-5_instr3.cpp
        #        4-6_numstr.cpp
        #        4-7_strtype1.cpp
        #        4-8_strtype2.cpp
        #        4-9_strtype3.cpp
        #        4-10_strtype4.cpp
        #        4-11_structur.cpp
        #        4-12_assgn_st.cpp
        #        4-13_arrstruc.cpp
        #        4-14_address.cpp
        #        4-15_pointer.cpp
        #        4-17_use_new.cpp
        #        4-18_arraynew.cpp
        #        4-19_addpntrs.cpp
        # 4-20_ptrstr.cpp
        )


